--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   http: ^1.2.2
   http_parser: ^4.0.2
   material_symbols_icons: ^4.2768.0
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
