--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,26 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_native_splash: ^2.2.19
+  flutter_launcher_icons: ^0.12.0
 
 flutter:
   assets:
     - assets/logo/
+    - assets/icon/
   uses-material-design: true
+
+flutter_icons:
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_foreground: "assets/icon/icon.png"
+  android: true
+  ios: true
+  adaptive_icon_background: "#DFFFEA"
+
+flutter_native_splash:
+  color: "#FCFDF6"
+  color_dark: "#1A1C19"
+  image: "assets/logo/light.png"
+  image_dark: "assets/logo/dark.png"
+  android: true
+  ios: true
