--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nutrution
+name: nutrition
 description: "A new Flutter project."
 publish_to: "none"
 version: 0.1.0
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
   flutter_bloc: ^8.1.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
